<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pa01">

    <TextView
        android:id="@+id/a0001_txt04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a0001_txt04"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/a0001_txt05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pa01"
        android:text="@string/a0001_txt05"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/a0001_txt06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pa01"
        android:text="@string/a0001_txt06"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/a0001_txt07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pa01"
        android:text="@string/a0001_txt07"
        android:textSize="24sp" />
</LinearLayout>