<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_silver_c0c0c0">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="@dimen/Margins">

        <TextView
            android:id="@+id/a0001_txt01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a0001_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/a0001_txt02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a0001_week"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/a0001_txt03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/a0001_attendance"
        android:textSize="18sp" />

</LinearLayout>